[package]
name = "vulkan_engine"
version = "0.1.0"
authors = ["Michael Lohr <michael@lohr-ffb.de>", "Shemnei", "Robin Quint <rob2309@hotmail.de>"]
edition = "2018"

[lib]
name = "vulkan_engine"

[workspace]
members = [
    "crystal",
    "vulkan-engine_derive",
    "ve_format",
    "ve_asset",
    "ve_shader_reflect"
]

[dependencies]
ash = "0.31.0"
ash-window = "0.5.0"
env_logger = "0.8.2"
log = "0.4.14"
thiserror = "1.0.23"
vk-mem = { git = "https://github.com/gwihlidal/vk-mem-rs", version = "0.2.3" }
winit = "0.24.0"
crystal = { path = "crystal" }
image = "0.23.13"
vulkan-engine_derive = { path = "vulkan-engine_derive" }
ve-shader-reflect = { path = "ve_shader_reflect" }
ve_format = { path = "ve_format"}
anyhow = "1.0.38"

[profile.release]
lto = "thin"

[profile.dev]
opt-level = 0
