[workspace]
members = [
    "crates/engine",
    "crates/ve_asset",
    "crates/ve_format",
    "crates/ve_shader_reflect",
]

resolver = "2"

[profile.production]
inherits = "release"
opt-level = 3
lto = "fat"
incremental = false
codegen-units = 1

# TODO: switch over to crates.io releases when ready
[patch.crates-io]
puffin = { git="https://github.com/EmbarkStudios/puffin", ref="bee65bcb87c1c8e82c50163467a0c54920eef2a3" }
puffin_egui = { git="https://github.com/EmbarkStudios/puffin", ref="bee65bcb87c1c8e82c50163467a0c54920eef2a3" }
