[package]
name = "ve_asset"
version = "0.1.0"
authors = ["Michael Lohr <michael@lohr-ffb.de>"]
description = "This utility converts different game development assets into a more hardwar-oriented format."
edition = "2018"
readme = "README.md"

[dependencies]
crystal = { path="../crystal" }
ve_format = { path="../ve_format" }
structopt = "0.3.21"
thiserror = "1.0.23"
anyhow = "1.0.38"
log = "0.4.14"
env_logger = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
walkdir = "2.3.1"
