[package]
name = "vulkan-engine_derive"
version = "0.1.0"
authors = ["Robin Quint <rob2309@hotmail.de>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
