[package]
name = "vulkan_engine"
version = "0.1.0"
authors = ["Michael Lohr <michael@lohr.dev>", "Shemnei", "Robin Quint <rob2309@hotmail.de>"]
readme = "../../README.md"
edition = "2021"

[lib]
name = "vulkan_engine"

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
thiserror = "1.0.30"
anyhow = "1.0.44"
ash = "0.35.0"
ash-window = "0.9.0"
gpu-allocator = { version="0.14.0", default-features = false, features=["vulkan"] }
winit = "0.26.0"
image = "0.23.14"
gfx-maths = "0.2.6"
ve-shader-reflect = { path = "../ve_shader_reflect" }
ve_format = { path = "../ve_format"}
imgui = { git="https://github.com/imgui-rs/imgui-rs", features=["docking"] }
imgui-sys = { git="https://github.com/imgui-rs/imgui-rs" }
imgui-winit-support = { git="https://github.com/imgui-rs/imgui-rs" }
serde = { version= "1.0.136", features=["derive"] }
toml = "0.5.8"

puffin = { version="0.12.1", optional=true }
#puffin-imgui = { version="0.16.0", optional=true }

[dev-dependencies]

[features]
default = [ "profiler" ]

debug_refcell = []
profiler = [ "puffin" ]
