[package]
name = "vulkan_engine"
version = "0.1.0"
authors = ["Michael Lohr <michael@lohr.dev>", "Shemnei", "Robin Quint <rob2309@hotmail.de>"]
readme = "../../README.md"
edition = "2021"

[lib]
name = "vulkan_engine"

[dependencies]
env_logger = "0.11.2"
log = "0.4.20"
thiserror = "1.0.57"
anyhow = "1.0.79"
ash = "0.37.3"
ash-window = "0.12.0"
gpu-allocator = { version="0.25.0", default-features = false, features=["vulkan"] }
winit = { version="0.29.10", features=["rwh_05"] }
raw-window-handle = "0.5.2"
image = "0.24.8"
gfx-maths = "0.2.9"
ve-shader-reflect = { path = "../ve_shader_reflect" }
ve_format = { path = "../ve_format"}
egui = "0.26.1"
egui-winit = "0.26.1"
egui_plot = "0.26.1"
serde = { version= "1.0.196", features=["derive"] }
toml = "0.8.10"

puffin = { version="0.19.0", optional=true }
puffin_egui = { version="0.25.0", optional=true }

[dev-dependencies]

[features]
default = [ "profiler" ]

profiler = [ "dep:puffin", "dep:puffin_egui" ]
