[package]
name = "ve-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"
ash-window = "0.12.0"
log = "0.4.17"
raw-window-handle = "0.5.0"
thiserror = "1.0.37"
winit = "0.27.5"

[dev-dependencies]
env_logger = "0.9.3"
