[package]
name = "ve_format"
version = "0.1.0"
authors = ["Michael Lohr <michael@lohr-ffb.de>"]
description = "This library hold hardware-oriented structures for game engines."
edition = "2018"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "1.3" }
gfx-maths = { version="0.2.4", features=["serde"] }
thiserror = "1.0.24"
